implemented python RGD and linesearch

--- a/SphereRGD.ipynb
+++ b/SphereRGD.ipynb
@@ -1094,6 +1094,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "println('hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
